tests/baselines/reference/ClassDeclaration24.errors.txt
ClassDeclaration24.ts(1,7): error TS2414: Class name cannot be 'any'.


==== ClassDeclaration24.ts (1 errors) ====
    class any {
          ~~~
!!! error TS2414: Class name cannot be 'any'.
    }